--- a/templates/single_motion.html
+++ b/templates/single_motion.html
@@ -5,14 +5,18 @@ Motion: {{motion.name}}
 {% block body %}
 {%- include 'motion.html' %}
 {%- if motion.running %}
+{%- if may_vote %}
 <form action="/motion/{{motion.id}}/vote" method="POST">
 {%- for vote in ['yes','no','abstain'] %}
 <button type="submit" class="btn btn-{{ 'success' if vote == motion.result else 'primary' }}" name="vote" value="{{vote}}" id="vote-{{vote}}">{{vote}}</button>
 {%- endfor %}
 </form>
+{%- endif %}
+{%- if may_cancel %}
 <form action="/motion/{{motion.id}}/cancel" method="POST">
 <input type="text" name="reason" required="yes">
 <button type="submit">Cancel</button>
 </form>
+{%- endif %}
 {%- endif %}
 {%- endblock %}
