--- a/templates/single_motion.html
+++ b/templates/single_motion.html
@@ -14,7 +14,7 @@ Motion: {{motion.name}}
 {%- endif %}
 {%- if may_cancel %}
 <form action="/motion/{{motion.id}}/cancel" method="POST" class="form-inline">
-<input type="text" name="reason" class="form-control" required="yes">
+<input type="text" placeholder="cancelation reason" name="reason" class="form-control" required="yes">
 <button type="submit" class="btn btn-danger">Cancel</button>
 </form>
 {%- endif %}
