--- a/templates/single_motion.html
+++ b/templates/single_motion.html
@@ -19,5 +19,5 @@ Motion: {{motion.name}}
 </form>
 {%- endif %}
 {%- endif %}
-<a href="/?start={{motion.id}}#motion-{{motion.id}}">Back</a>
+<a href="/?start={{motion.id}}#motion-{{motion.id}}" class="btn btn-primary">Back</a>
 {%- endblock %}
