--- a/templates/motion.html
+++ b/templates/motion.html
@@ -9,7 +9,7 @@
     <span class="motion-type">{{motion.type}}</span>
     <div># <a href="/motion/{{motion.identifier}}" class="anchor">{{motion.identifier}}</a></div>
     <div class="date">
-      <div>Posed: {{motion.posed|timestamp}} (UTC) by {{motion.poser}}</div>
+      <div>Proposed: {{motion.posed|timestamp}} (UTC) by {{motion.poser}}</div>
 {%- if motion.canceled != None %}
       <div>Canceled: {{motion.canceled|timestamp}} (UTC) by {{motion.canceler}}</div></div>
 {%- else %}
