--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <title>{% block title %}Motion list{% endblock %}</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <style type="text/css">
 .motion {
   border: 1px solid black;
+  margin-top:5px;
+  margin-bottom:5px;
 }
 .motion .motion-title input.motion-title-input {
   width: 80%;
@@ -39,6 +41,10 @@
 }
 .motion p {
   padding: 10px;
+}
+form {
+  margin-top:5px;
+  margin-bottom:5px;
 }
 </style>
 </head>
