--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 {% block body %}
 <div class="container">
 {%- if categories|length != 0 %}
-<form action="/motion" method="POST" class="form-inline">
-<div class="panel panel-default">
-<div class="panel-body">
+<div class="card">
+<div class="card-body">
 User: {{g.user}}
 </div>
 </div>
-<div class="motion panel panel-default">
-  <div class="motion-title panel-heading from-group">
+<form action="/motion" method="POST" class="form-inline">
+<div class="motion card">
+  <div class="motion-title card-heading bg-light from-group">
     <input class="form-control motion-title-input" placeholder="Motion title" type="text" name="title" id="title">
     {%- if categories|length == 1 %}
     <input type="text" class="float form-control" maxwidth="10" disabled value="{{categories[0]}}">
@@ -27,7 +27,7 @@ User: {{g.user}}
       {%- endfor %}
     </select>
   </div>
-  <div class="panel-body">
+  <div class="card-body">
     <textarea class="form-control" placeholder="Motion content" name="content" rows="8" cols="70"></textarea><br>
     Editing note: Markdown is used formatting.<br>
     To add a line break add two lines, to enter a link use [text](https//domain.tld/link)<br>
