--- a/templates/motion.html
+++ b/templates/motion.html
@@ -1,10 +1,10 @@
-<div class="motion panel
-{%- if motion.running %} panel-default
-{%- elif motion.canceled %} panel-warning
-{%- elif motion.yes is defined %}{% if motion.yes != None and motion.no != None and motion.yes > motion.no %} panel-success{% else %} panel-danger{% endif %}
-{%- else %} panel-default{%- endif -%}
-" id="motion-{{motion.id}}">
-  <div class="motion-title panel-heading">
+<div class="motion card" id="motion-{{motion.id}}">
+  <div class="motion-title card-heading 
+  {%- if motion.running %} bg-light
+{%- elif motion.canceled %} text-white bg-warning
+{%- elif motion.yes is defined %}{% if motion.yes != None and motion.no != None and motion.yes > motion.no %} text-white bg-success{% else %} text-white bg-danger{% endif %}
+{%- else %} bg-light{%- endif -%}
+">
     <span class="title-text">{{motion.name}}</span> ({{ 'Running' if motion.running else ('Canceled' if motion.canceled != None else 'Finished') }})
     <span class="motion-type">{{motion.type}}</span>
     <div># <a href="/motion/{{motion.identifier}}" class="anchor">{{motion.identifier}}</a></div>
@@ -16,7 +16,7 @@
       <div>Votes until: {{motion.deadline|timestamp}} (UTC)</div></div>
 {%- endif %}
   </div>
-  <div class="panel-body">
+  <div class="card-body">
     <p>{{motion.content|markdown}}</p>
 {%- if motion.yes or motion.no or motion.abstain %}
     <p>
