--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,8 @@ User: {{g.user}}
   </div>
   <div class="panel-body">
     <textarea class="form-control" placeholder="Motion content" name="content" rows="8" cols="70"></textarea><br>
+    Editing note: Markdown is used formatting.<br>
+    To add a line break add two lines, to enter a link use [text](https//domain.tld/link)<br>
     <button class="btn btn-primary" type="submit">Submit Motion</button>
   </div>
 </div>
