--- a/templates/motion.html
+++ b/templates/motion.html
@@ -17,7 +17,7 @@
 {%- endif %}
   </div>
   <div class="panel-body">
-    <p>{{motion.content}}</p>
+    <p>{{motion.content|markdown}}</p>
 {%- if motion.yes or motion.no or motion.abstain %}
     <p>
 {%- for vote in ['yes', 'no', 'abstain'] %}
