upd: correction position of brackets

--- a/templates/motion.html
+++ b/templates/motion.html
@@ -13,7 +13,7 @@
 {%- if motion.canceled != None %}
       <div>Canceled: {{motion.canceled|timestamp}} (UTC) by {{motion.canceler}}</div></div>
 {%- else %}
-      <div>Votes until: {{motion.deadline|timestamp} (UTC)}</div></div>
+      <div>Votes until: {{motion.deadline|timestamp}} (UTC)</div></div>
 {%- endif %}
   </div>
   <div class="panel-body">
