upd: formatting of motion area

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,11 @@
 }
 .motion textarea {
   display: block;
+  min-width: 100%;
 }
 .motion .motion-title{
   border-bottom: 1px solid black;
+  padding: 5px;
 }
 .motion .motion-title .title-text{
   font-size: 15pt;
