--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@ User: {{g.user}}
 </div>
 <form action="/motion" method="POST" class="form-inline">
 <div class="motion card">
-  <div class="motion-title card-heading bg-light from-group">
+  <div class="motion-title card-heading alert-light from-group">
     <input class="form-control motion-title-input" placeholder="Motion title" type="text" name="title" id="title">
     {%- if categories|length == 1 %}
     <input type="text" class="float form-control" maxwidth="10" disabled value="{{categories[0]}}">
@@ -28,7 +28,7 @@ User: {{g.user}}
     </select>
   </div>
   <div class="card-body">
-    <textarea class="form-control" placeholder="Motion content" name="content" rows="8" cols="70"></textarea><br>
+    <textarea class="form-control" placeholder="Motion content" name="content" rows="8"></textarea><br>
     Editing note: Markdown is used formatting.<br>
     To add a line break add two lines, to enter a link use [text](https//domain.tld/link)<br>
     <button class="btn btn-primary" type="submit">Submit Motion</button>
