more bootstrap adjustments

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
 <title>{% block title %}Motion list{% endblock %}</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <style type="text/css">
+.form-inline .motion {
+  width: 100%;
+}
 .motion {
   border: 1px solid black;
   margin-top:5px;
