add: add footer with copyright  and legal requirements
check config.py for adjustments

Change-Id: I4795b7b4766d70b8081a60e71ef38e96c207e15c

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,5 +56,13 @@ form {
 <body>
 {%- block body %}
 {% endblock %}
+<!-- Footer -->
+  <footer class="page-footer">
+    <div class="footer-copyright text-center py-3">
+      <p>© {{footer.version_year}} Copyright: <a href="{{footer.copyright_link}}">{{footer.copyright_name}}</a> 
+      | <a href="{{footer.imprint_link}}">Imprint</a> 
+      | <a href="{{footer.dataprotection_link}}">Data protection</a></p>
+    </div>
+  </footer>
 </body>
 </html>
