--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@ User: {{g.user}}
   <div class="card-body">
     <textarea class="form-control" placeholder="Motion content" name="content" rows="8"></textarea><br>
     Editing note: Markdown is used formatting.<br>
-    To add a line break add two lines, to enter a link use [text](https//domain.tld/link)<br>
+    To add a line break add two lines, to enter a link use [text](https://domain.tld/link)<br>
     <button class="btn btn-primary" type="submit">Submit Motion</button>
   </div>
 </div>
